# haskell-keyboard-ga

./: .cabal  FitnessAlgorithm.hs  ItemsToDO.txt  Keyboard.hs  KeyboardFactory.hs  KeyboardFitness.hs  README  Runner.hs  ShuffleImperfect.hs  WeightReader.hs  howToCompileRunPar.txt  keyboardga.cabal  randomTest.hs
GeneticAlgorithm/Keyboard/: FitnessAlgorithm.hs  KeyboardFitness.hs  NaiveShuffle.hs  Runner.hs  WeightReader.hs
GeneticAlgorithm/Keyboard/data/test/input/: testInput1
GeneticAlgorithm/Keyboard/test/: TestFitnessAlgorithm.hs
data/weights/: diNovoEdgeWeigts.hs  testKey.hs  test_keyboardWeight.hs
src/: Shuffle.hs
test/input/: testInput
